--- a/infrastructure/production/filen-cli/patch.yaml
+++ b/infrastructure/production/filen-cli/patch.yaml
@@ -8,5 +8,7 @@ spec:
     spec:
       containers:
         - image: filen/cli:v0.0.26
-          name: filen-cli
+          name: filen-cli-webdav
+        - image: filen/cli:v0.0.26
+          name: filen-cli-s3
 
