forgejo: renamed cluster claim secret

--- a/apps/production/forgejo/forgejo-postgresql-claim-secret.yaml
+++ b/apps/production/forgejo/forgejo-postgresql-claim-secret.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: data-postgresql-0
+    name: forgejo-postgres-cluster-1
     namespace: forgejo
 stringData:
-    CRYPTO_KEY_VALUE: ENC[AES256_GCM,data:d0LV5CzSR4NS33vE+GviYuWM/HK0tr9FB33T+wVa/njex+g=,iv:yL/hCbS6oS9BbZMsfGQfw8Xfh8U9Ioc750oHW3bDA+g=,tag:8m424/CeD7wXT9nODKo19w==,type:str]
-    CRYPTO_KEY_PROVIDER: ENC[AES256_GCM,data:DAapP1MQ,iv:A6JfhvzeNowA/aKFOT6LJcz8GZfEK5ogl0O3XUYXM9w=,tag:TQHvVxkgaEV1FzbGAjgFoA==,type:str]
-    CRYPTO_KEY_CIPHER: ENC[AES256_GCM,data:YNGwXCixLxjIr51A+QAI,iv:OIQgzib4IR6ry+O0mL+pYL4RRQOzUUX8pm3DAB+iL9w=,tag:X6/6sns3rhH/cCcQmB5XNw==,type:str]
-    CRYPTO_KEY_HASH: ENC[AES256_GCM,data:xl6e1ThI,iv:RdypOL/sQgI8La8J2ueuqPMHWjZ2qXNNKTunkfO/mlI=,tag:fQIQOff26jnbqHrEgFk7lg==,type:str]
-    CRYPTO_KEY_SIZE: ENC[AES256_GCM,data:J79r,iv:3mkEE4UfL1vdH+lfpp+WT0LWUjreYzm4283yJEEPvMQ=,tag:tQ8HGgtrATAVfTGQgp2U4A==,type:str]
-    CRYPTO_PBKDF: ENC[AES256_GCM,data:lyTfs9Od7A==,iv:vPV+GmptJghijbR7IVXGYZ12ocPKSeo7kWU2wGEf0J8=,tag:RGATLRwSL8f1zRzFsOxdBA==,type:str]
+    CRYPTO_KEY_VALUE: ENC[AES256_GCM,data:8U2rHXs4Jhi7HiHkLKz68Pu3FDZoq1uL7WgevbOfz77UbI0=,iv:IAPleYI8IUqorTTikunWKiYRHORYJxRSM0jQMlrDoWQ=,tag:B/acmIiqSV54jF3Ybfe+cA==,type:str]
+    CRYPTO_KEY_PROVIDER: ENC[AES256_GCM,data:a3k4yeZS,iv:Tu/2F2zMir06ECvdDgXyAWt9A5IlEXoCDhINT3ke84E=,tag:ty7UoPO9Y/9DPVpViJre6A==,type:str]
+    CRYPTO_KEY_CIPHER: ENC[AES256_GCM,data:BeGI/xsxTZ7fnt21hYD+,iv:iSBl/cerJVArIkFDWUdcbimgsG0WmRAkmYX1fa9O0k0=,tag:qjjX4K0lyZfI8/x6wLnMYQ==,type:str]
+    CRYPTO_KEY_HASH: ENC[AES256_GCM,data:e47Z6QMY,iv:rfAjZo8wUkY4k0xjv6goDJPt+0VfLlv5fv+B48tO84w=,tag:ZJzbEMoD0kQvyqPjY+tmBQ==,type:str]
+    CRYPTO_KEY_SIZE: ENC[AES256_GCM,data:3zu4,iv:RKoWShJBP6E8ZxU/WKH+AVHP1pAG2hVPcaZk9Dj78mw=,tag:bP9TCAVj8b1w80w82xl4GQ==,type:str]
+    CRYPTO_PBKDF: ENC[AES256_GCM,data:8ohq5csfCQ==,iv:tkI6xompgRBn07H+w+86ObJyZ2jx8uR2gOyXkoV6Gbs=,tag:16wAIkFRPXoS2GH0aHN22w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -19,14 +19,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNNFhxQ3pPSGtkNnkyKzlB
-            RkpUS3Y3SkJNOElwMW02Z3A4cTBBcm8xL3lzCms4MG0rZDU1bm80TE1sTlBCa3hP
-            Ty90VE5OYjIwSDhJbWlPRy9wbHQyVXMKLS0tIE44VS9jSHR6V2JjdGNOUVl5M0tG
-            Z2ZIVmtDak4yUmRMT0p4REZ0M2dxL1kKCpKqGn4w2vHhkc922tuOrWjIrv+RjItb
-            /YoZqBsz8JPSSmvLHCDx1fBkyh0iUZmUSlmnudRsUJb1Xqo9wAm9yg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoK0Nmbi9vbDFVWDVncEpW
+            UGY2WVRiSjlPbTVWNFBweHhpazIvVTlDRXlFCm90UE1uMy9wWmYyUTZocXJNUjR0
+            Snp1N1VYYTFweXZIR2FBQnJVRGNEcVUKLS0tIEZSekNhTm54ZVV6ZFlEYlZsSlNl
+            WGhrMk1leDVTaW5QenI2OTQvSUJJeGsKdbsIjsX7VKhiv3iLIxUCANgM0xM1a6rX
+            LZAENsc/XPpMxBrozDmeYFzvIM0tFfKOpx9H5OclzQNSneANGHJ2mQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-03T20:01:54Z"
-    mac: ENC[AES256_GCM,data:lse7akYYQLVqw14NV5RATxS5CLACX8RL9ewQK3HMLM+Am16Eu5iWSpvdo/2eDXCBp3mctXoNa483ckGOazVCLJ+2U2Ofqg/skHivg/f9XR5PTkOxfb9zz3Gsvrkugv0L+UL09b+HvE8gYTlRpo2XwurGs5BR65943sUAJLNNLiU=,iv:LGnJAo1Hw03Pws2eabIDhtZUCXwr+IZ3ihld+tQq6AE=,tag:7ut3Emg1QglIyZMg5+GkUg==,type:str]
+    lastmodified: "2024-12-11T09:21:01Z"
+    mac: ENC[AES256_GCM,data:/TCWNeISyVWpKyjY8mbX0VhOY0cntv9e1VHv51en7FEJRI3hGuZKiPX4GIm5CSKYpwW4JztDos/VwihOQRxjK+y0t14i9/Nh/c2TbJThz+VLsM5HEJPSQIoAXOmGo8Gqu7Pt0iCcZUplqmgggimKdWhqg3HWr26G7M7Inf1D9wI=,iv:gv+hDpHXqlCMn7qEmocHF6VDRrQrgPOWoMzeocsqTmc=,tag:6KqjSQehqqKQeYxPUIrQBw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
