longhorn: modified backup and snapshot schedule

--- a/infrastructure/production/longhorn/config/snapshot-schedule.yaml
+++ b/infrastructure/production/longhorn/config/snapshot-schedule.yaml
@@ -1,11 +1,11 @@
-apiVersion: longhorn.io/v1beta1
+apiVersion: longhorn.io/v1beta2
 kind: RecurringJob
 metadata:
   name: snapshot-all-volumes
   namespace: longhorn-system
 spec:
-  task: "snapshot"
-  cron: "0 */6 * * *"
+  task: snapshot
+  cron: 0 */6 * * *
   retain: 5
   concurrency: 2
   groups:
