--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -90,3 +90,7 @@ spec:
       #   loadBalancerIP: 192.168.178.151 # this should be an IP in the MetalLB range
       loadBalancerSourceRanges: []
       externalIPs: []
+
+    prometheus:
+      # -- Entry point used to expose metrics.
+      entryPoint: metrics
