monitoring added ingress
Forgot to add to kustomization

--- a/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yaml
   - repository.yaml
   - release.yaml
+  - ingressConfig.yaml
 configMapGenerator:
   - name: flux-kube-state-metrics-config
     files:
