--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -86,11 +86,13 @@ spec:
       type: LoadBalancer
       annotations: {}
       labels: {}
-      # spec:
-      #   loadBalancerIP: 192.168.178.151 # this should be an IP in the MetalLB range
       loadBalancerSourceRanges: []
       externalIPs: []
 
-    prometheus:
-      # -- Entry point used to expose metrics.
-      entryPoint: metrics
+    metrics:
+      prometheus:
+        enabled: true
+        addEntryPointsLabels: true
+        addServicesLabels: true
+        addRoutersLabels: true
+
