--- a/monitoring/configs/kustomization.yaml
+++ b/monitoring/configs/kustomization.yaml
@@ -9,6 +9,7 @@ configMapGenerator:
       - dashboards/control-plane.json
       - dashboards/cluster.json
       - dashboards/logs.json
+      - dashboards/traefik-official-standalone-dashboard-rev9.json
     options:
       labels:
         grafana_dashboard: "1"
