traefik: added annotation

--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -110,4 +110,6 @@ spec:
       serviceMonitor:
         enabled: true
         namespace: monitoring
+        additionalLabels:
+          release: kube-prometheus-stack
 
