--- a/monitoring/configs/servicemonitor.yaml
+++ b/monitoring/configs/servicemonitor.yaml
@@ -1,15 +1,37 @@
+# apiVersion: monitoring.coreos.com/v1
+# kind: ServiceMonitor
+# metadata:
+#   name: traefik-service-monitor
+#   namespace: monitoring
+#   labels:
+#     release: kube-prometheus-stack
+#     app.kubernetes.io/name: traefik
+# spec:
+#   selector:
+#     matchLabels:
+#       app.kubernetes.io/name: traefik
+#   endpoints:
+#   - port: metrics
+#     interval: 15s
+# ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: traefik-service-monitor
-  namespace: monitoring
   labels:
     release: kube-prometheus-stack
-    app.kubernetes.io/name: traefik
+  name: traefik
 spec:
+  endpoints:
+
+  - path: /metrics
+    port: metrics
+    scheme: http
+    interval: 60s
+
+  jobLabel: traefik
+  namespaceSelector:
+    matchNames:
+    - traefik
   selector:
     matchLabels:
-      app.kubernetes.io/name: traefik
-  endpoints:
-  - port: metrics
-    interval: 15s
+      app: traefik
