Disabled custom service monitor to try the traefik integrated one.

--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -107,9 +107,9 @@ spec:
       disableAPICheck: false
       serviceMonitor:
         enabled: true
-        namespace: monitoring
-        # additionalLabels:
-        #   release: kube-prometheus-stack
+        # namespace: monitoring
+        additionalLabels:
+          release: kube-prometheus-stack
         metricRelabelings:
           - sourceLabels: [__name__]
             separator: ;
