traefik: defined namespace for servicemonitor

--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -107,7 +107,7 @@ spec:
       disableAPICheck: false
       serviceMonitor:
         enabled: true
-        # namespace: monitoring
+        namespace: monitoring
         additionalLabels:
           release: kube-prometheus-stack
         metricRelabelings:
