Monitoring: defined custom secret
monitoring: forgot kustomization

--- a/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - repository.yaml
   - release.yaml
   - ingressConfig.yaml
+  - grafana-secret.yaml
 configMapGenerator:
   - name: flux-kube-state-metrics-config
     files:
