--- a/clusters/production/monitoring.yaml
+++ b/clusters/production/monitoring.yaml
@@ -5,6 +5,10 @@ metadata:
   name: monitoring-controllers
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   interval: 1h
   retryInterval: 2m
   timeout: 10m
@@ -21,6 +25,10 @@ metadata:
   name: monitoring-configs
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   dependsOn:
     - name: monitoring-controllers
   interval: 1h
