monitoring: renamed grafana secret.

--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -47,7 +47,7 @@ spec:
     grafana:
       defaultDashboardsEnabled: true
       admin:
-        existingSecret: "kube-prometheus-stack-grafana"
+        existingSecret: "grafana-secret"
         userKey: admin-user
         passwordKey: admin-password
 
