longhorn: Added release label

--- a/infrastructure/base/longhorn/manifest.yaml
+++ b/infrastructure/base/longhorn/manifest.yaml
@@ -51,3 +51,5 @@ spec:
       serviceMonitor:
         # -- Setting that allows the creation of a Prometheus ServiceMonitor resource for Longhorn Manager components.
         enabled: true
+        additionalLabels:
+          release: kube-prometheus-stack
