--- a/monitoring/configs/kustomization.yaml
+++ b/monitoring/configs/kustomization.yaml
@@ -11,6 +11,7 @@ configMapGenerator:
       - dashboards/cluster.json
       - dashboards/logs.json
       - dashboards/traefik-official-standalone-dashboard-rev9.json
+      - dashboards/longhorn.json
     options:
       labels:
         grafana_dashboard: "1"
