traefik: enabled internal metrics

--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -97,6 +97,7 @@ spec:
       # externalIPs: []
 
     metrics:
+      addInternals: true
       prometheus:
         enabled: true
         addEntryPointsLabels: true
