monitoring: Added persistence to prometheus
monitoring: changed pvc config

monitoring: misused config

--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -44,12 +44,22 @@ spec:
         podMonitorSelector:
           matchLabels:
             app.kubernetes.io/component: monitoring
+        storageSpec:
+          volumeClaimTemplate:
+            spec:
+              storageClassName: "longhorn-crypto-per-volume"
+              accessModes: ["ReadWriteOnce"]
+              resources:
+                requests:
+                  storage: 1Gi
     grafana:
       defaultDashboardsEnabled: true
       admin:
         existingSecret: "grafana-secret"
         userKey: admin-user
         passwordKey: admin-password
+
+
 
       # adminPassword: flux
       # persistence:
