--- a/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - release.yaml
   - ingressConfig.yaml
   - grafana-secret.yaml
+  - prometheus-claim-secret.yaml
 configMapGenerator:
   - name: flux-kube-state-metrics-config
     files:
