monitoring: Added secret for alertmanager claim

--- a/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ingressConfig.yaml
   - grafana-secret.yaml
   - prometheus-claim-secret.yaml
+  - alertmanager-claim-secret.yaml
 configMapGenerator:
   - name: flux-kube-state-metrics-config
     files:
