--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -67,12 +67,12 @@ spec:
         existingSecret: "grafana-secret"
         userKey: admin-user
         passwordKey: admin-password
+      persistence:
+        enabled: true
+        storageClassName: "longhorn-crypto-per-volume"
+        size: 1Gi
 
 
 
 
       # adminPassword: flux
-      # persistence:
-      #   enabled: true
-      #   storageClassName: "longhorn-crypto-per-volume"
-      #   size: 1Gi
