--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -34,6 +34,10 @@ spec:
     alertmanager:
       enabled: true
       alertmanagerSpec:
+        resources:
+          requests:
+            cpu: 400m
+            memory: 400Mi
         storage:
           volumeClaimTemplate:
             spec:
