--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -3,7 +3,16 @@ kind: HelmRelease
 metadata:
   name: kube-prometheus-stack
 spec:
-  interval: 1h
+  timeout: 15m
+  interval: 30m
+  install:
+    crds: Create
+    remediation:
+      retries: 3
+  upgrade:
+    crds: CreateReplace
+    remediation:
+      retries: 3
   chart:
     spec:
       chart: kube-prometheus-stack
@@ -13,10 +22,6 @@ spec:
         name: prometheus-community
         namespace: monitoring
       interval: 12h
-  install:
-    crds: Create
-  upgrade:
-    crds: CreateReplace
   driftDetection:
     mode: enabled
     ignore:
