--- a/monitoring/controllers/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/kube-prometheus-stack/release.yaml
@@ -43,14 +43,14 @@ spec:
           requests:
             cpu: 400m
             memory: 400Mi
-        storage:
-          volumeClaimTemplate:
-            spec:
-              accessModes: ["ReadWriteOnce"]
-              resources:
-                requests:
-                  storage: 1Gi
-              storageClassName: "longhorn-crypto-per-volume" # Optional
+        # storage:
+        #   volumeClaimTemplate:
+        #     spec:
+        #       accessModes: ["ReadWriteOnce"]
+        #       resources:
+        #         requests:
+        #           storage: 1Gi
+        #       storageClassName: "longhorn-crypto-per-volume" # Optional
     prometheus:
       prometheusSpec:
         retention: 24h
@@ -61,21 +61,21 @@ spec:
         podMonitorSelector:
           matchLabels:
             app.kubernetes.io/component: monitoring
-        storageSpec:
-          volumeClaimTemplate:
-            spec:
-              storageClassName: "longhorn-crypto-per-volume"
-              accessModes: ["ReadWriteOnce"]
-              resources:
-                requests:
-                  storage: 10Gi
+        # storageSpec:
+        #   volumeClaimTemplate:
+        #     spec:
+        #       storageClassName: "longhorn-crypto-per-volume"
+        #       accessModes: ["ReadWriteOnce"]
+        #       resources:
+        #         requests:
+        #           storage: 10Gi
     grafana:
       defaultDashboardsEnabled: true
       admin:
         existingSecret: "grafana-secret"
         userKey: admin-user
         passwordKey: admin-password
-      persistence:
-        enabled: true
-        storageClassName: "longhorn-crypto-per-volume"
-        size: 1Gi
+      # persistence:
+      #   enabled: true
+      #   storageClassName: "longhorn-crypto-per-volume"
+      #   size: 1Gi
