--- a/clusters/production/infrastructure.yaml
+++ b/clusters/production/infrastructure.yaml
@@ -157,6 +157,7 @@ spec:
   dependsOn:
     - name: metallb-config
     - name: cert-manager-config
+    - name: monitoring-configs
   interval: 1h
   retryInterval: 1m
   timeout: 5m
