--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -60,8 +60,8 @@ spec:
             ip: "192.168.178.155"
       healthz:
         image:
-          repository: registry.k8s.io/e2e-test-images/agnhost
-          tag: "2.40"
+          repository: bopjiang/google_containers_exechealthz
+          tag: "1.0"
           pullPolicy: IfNotPresent
         resources:
           requests:
