--- a/infrastructure/base/filen-cli/manifest.yaml
+++ b/infrastructure/base/filen-cli/manifest.yaml
@@ -40,9 +40,9 @@ spec:
             node filen webdav --w-user $W_USER --w-password $W_PASSWORD --w-port 9090
         ports:
         - containerPort: 9090
-        # volumeMounts:
-        #   - mountPath: /root/.config/filen-cli/
-        #     name: filen-cli-webdav-claim
+        volumeMounts:
+          - mountPath: /root/.config/filen-cli/
+            name: filen-cli-webdav-claim
       - name: filen-cli-s3
         env:
           - name: S3_ACCESS_KEY_ID
@@ -61,17 +61,17 @@ spec:
             node filen s3 --s3-access-key-id $S3_ACCESS_KEY_ID --s3-secret-access-key $S3_SECRET_ACCESS_KEY --s3-port 8080
         ports:
         - containerPort: 8080
-        # volumeMounts:
-        #   - mountPath: /root/.config/filen-cli/
-        #     name: filen-cli-s3-claim
+        volumeMounts:
+          - mountPath: /root/.config/filen-cli/
+            name: filen-cli-s3-claim
       restartPolicy: Always
-      # volumes:
-        # - name: filen-cli-webdav-claim
-        #   persistentVolumeClaim:
-        #     claimName: filen-cli-webdav-claim
-        # - name: filen-cli-s3-claim
-        #   persistentVolumeClaim:
-        #     claimName: filen-cli-s3-claim
+      volumes:
+        - name: filen-cli-webdav-claim
+          persistentVolumeClaim:
+            claimName: filen-cli-webdav-claim
+        - name: filen-cli-s3-claim
+          persistentVolumeClaim:
+            claimName: filen-cli-s3-claim
 ---
 apiVersion: v1
 kind: Service
@@ -106,29 +106,29 @@ spec:
     name: s3
     port: 8080
     targetPort: 8080
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: filen-cli-webdav-claim
-#   namespace: filen-cli
-# spec:
-#   storageClassName: "longhorn-crypto-per-volume"
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 1Gi
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: filen-cli-s3-claim
-#   namespace: filen-cli
-# spec:
-#   storageClassName: "longhorn-crypto-per-volume"
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: filen-cli-webdav-claim
+  namespace: filen-cli
+spec:
+  storageClassName: "longhorn-crypto-per-volume"
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: filen-cli-s3-claim
+  namespace: filen-cli
+spec:
+  storageClassName: "longhorn-crypto-per-volume"
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
