--- a/infrastructure/production/longhorn/config/kustomization.yaml
+++ b/infrastructure/production/longhorn/config/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - longhorn-minio-backups.yaml
   - longhorn-crypto-sc.yaml
   - hibiscus-mysql-claim.yaml
+  - longhorn-crypto-global-secret.yaml
   # - backup-schedule.yaml
   # - snapshot-schedule.yaml
