--- a/infrastructure/production/longhorn/config/kustomization.yaml
+++ b/infrastructure/production/longhorn/config/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - longhorn-r2-backups.yaml
   - longhorn-minio-backups.yaml
-  - longhorn-crypto-sc.yaml
-  - longhorn-crypto-global-secret.yaml
+  # - longhorn-crypto-sc.yaml
+  # - longhorn-crypto-global-secret.yaml
   # - backup-schedule.yaml
   # - snapshot-schedule.yaml
