--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -41,7 +41,7 @@ spec:
       interval: 12h
   values:
     persistence:
-      storageClass: "longhorn-crypto-per-volume" 
+      # storageClass: "longhorn-crypto-per-volume" 
       enabled: true
     redis-cluster:
       enabled: false
@@ -100,6 +100,6 @@ spec:
         name: forgejo-cnpg
 
   storage:
-    storageClass: "longhorn-crypto-per-volume"
+    # storageClass: "longhorn-crypto-per-volume"
     size: 2Gi
 
