--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -120,29 +120,29 @@
 #   path: ./apps/production/guacamole
 #   prune: true
 #   wait: true
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: forgejo-git
-#   namespace: flux-system
-# spec:
-#   decryption:
-#     provider: sops
-#     secretRef:
-#       name: sops-age
-#   dependsOn:
-#     - name: longhorn-config
-#     - name: traefik-config
-#     - name: cert-manager-config
-#     - name: metallb-config
-#     - name: cloudnative-pg
-#   interval: 1h
-#   retryInterval: 1m
-#   timeout: 60m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#   path: ./apps/production/forgejo
-#   prune: true
-#   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: forgejo-git
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: longhorn-config
+    - name: traefik-config
+    - name: cert-manager-config
+    - name: metallb-config
+    - name: cloudnative-pg
+  interval: 1h
+  retryInterval: 1m
+  timeout: 60m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./apps/production/forgejo
+  prune: true
+  wait: true
