--- a/apps/production/guacamole/guacamole-secret.yaml
+++ b/apps/production/guacamole/guacamole-secret.yaml
@@ -9,17 +9,15 @@ metadata:
         meta.helm.sh/release-name: guacamole
         meta.helm.sh/release-namespace: guacamole
 stringData:
-    postgresPassword: ENC[AES256_GCM,data:47TuWWkLu4hcB/uJiNqbbnV4M2gmDOLG0QuO4NA+iTx2ZHVc/4diK/59OnKv,iv:QtB3xbiaTzDPU6MzYMCOGkHynw0M/Cer9h0BsDISXiM=,tag:whO65qyzFAJbs8clyQqR8w==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:WCBPzqJEXiteNLMpmpi6VjnJcdFwHiO5c/7wq3uv6ftoi/eD,iv:qZuAqp9lmxoCO5avQv/PktzCDkoSAS47RNwQq8i7sm4=,tag:rbA9nBjqAUEwmA0P6UXGvw==,type:str]
-    replicationPassword: ENC[AES256_GCM,data:d58mHcdLa/htDGJy0hpdHeXYe+fzpgH8NLbBEfvF8+JyAfENVxAk6DVOvRZe7KQ=,iv:WVCAV2FlRCYWXcNf6+nsmaZKvuYG+MyBpaTZMWRmCXE=,tag:mEaMtA1ZD+9DcTMj0bRqdA==,type:str]
-    GUACD_HOSTNAME: ENC[AES256_GCM,data:l4InU6RgzP71WQpAY/yu,iv:hFP+7UlUoAfFgyt+vYLX3u8fO99NAZMQtlIHTw2doXU=,tag:0nZrzEYf2/HfOMG9cgXOQw==,type:str]
-    GUACD_PORT: ENC[AES256_GCM,data:iS/+fw==,iv:o8Rn59cZddWYN0ERiglJ50he2mJDAu9Vif3u2lqnqbM=,tag:uc5cnyEasJQvEPLFD3cITA==,type:str]
-    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:zHVXCptmxYTyTg==,iv:9I+e5extjWs5H3xY0ISA777gl8Kj9ADFuxOCAo9/Mds=,tag:UMRXF1XD912vfciaQQkK7w==,type:str]
-    POSTGRES_PORT: ENC[AES256_GCM,data:PZQv2Q==,iv:ErQwbyoFmr54Vx+CZZJt+BczNOTtBMXLnYTq+lVri5s=,tag:egTYAvETdWFglYaoonKX6Q==,type:str]
-    POSTGRES_DATABASE: ENC[AES256_GCM,data:K4EXFdpF/2Ul,iv:sJrPe8qNb1D6rE0msnPXehIf0BEUXwPIY5WGQxUb1Bc=,tag:q9BmHdxte1g6vJLh7zNFww==,type:str]
-    POSTGRES_USER: ENC[AES256_GCM,data:pevH2zrrzE49,iv:JMuj8XOj11jpnKLoFr93voN6ki1FmqVk2umCBcSJY3I=,tag:4ee6lb+9bGr4J2l1LogcDQ==,type:str]
-    WEBAPP_CONTEXT: ENC[AES256_GCM,data:ZjrQ2A==,iv:GGtqHlfZv20hehW/x+lfXFpTe6fxgjOpoeA1+uq3KC8=,tag:Cvd8jnxYi31jkqphh++o0g==,type:str]
-    TOTP_ENABLED: ENC[AES256_GCM,data:mxb2Kw==,iv:0vOiyqRMzDzpOEYV7wKTLSvqfp5weQVgoIiNgmao5ZA=,tag:aErxCK5h6PRiz0UYyfX5Cg==,type:str]
+    postgresPassword: ENC[AES256_GCM,data:48ee0TkPhuOqgL6SGroJpt9hYI8SsjCfAgS1bnndM6qXgJ9FQ8o12NIItNZT,iv:Nkluf2qbiSv0RANTdo8P5jiP63A2u/P7lFx/UkG03yI=,tag:SsjA0RA1ckh3RJA89k06Yw==,type:str]
+    GUACD_HOSTNAME: ENC[AES256_GCM,data:wpvOoftOWNCOIsA9c2s4,iv:WwfK9IqiJuTgtKmS9WB39U6zQnKluO28EgY0xcR58iE=,tag:epQAXq7XPwPuQqrBVLTJoQ==,type:str]
+    GUACD_PORT: ENC[AES256_GCM,data:n+IvIw==,iv:R3NbCOAQIniGi/0nrCPh2A2FmXUJJXsCyyoljzDhvqE=,tag:UghPX2VhWNnvQAZK/wPL2A==,type:str]
+    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:pE4h+IKc+K8oHg==,iv:C5+4rdhZ8hSWP4NW8kMcUiu2nq8ViiASgJIjUIcn3Ho=,tag:3FQT2oRATpmqd3M/wj0lNg==,type:str]
+    POSTGRES_PORT: ENC[AES256_GCM,data:gVodpg==,iv:HGKa5ck12sT3KwGQHiLk8GPelA0sRNlxXDpqkzv0b5o=,tag:yHxOe6bfWFJ1RbnytoA77w==,type:str]
+    POSTGRES_DATABASE: ENC[AES256_GCM,data:6MfbH+OHb/C6,iv:j6undlfYtvjfFFxPs+nSCV+7CN7dKEKLJ3v1BrqVPgk=,tag:+Jl3CMkAJr5SW54cIhN9yA==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:BEc4QnO+EHuU,iv:KXyi0rVF7LY11dPiDcAlK5mSHfG+0IDgyspmBSEzbVw=,tag:arFfr4fVtY+S9Yo6UIDj1g==,type:str]
+    WEBAPP_CONTEXT: ENC[AES256_GCM,data:7y0AAA==,iv:EO238gvHiiX6RDtm/2ZidcwzkwV4jBoNiHl3RkZ+z/8=,tag:t+4MGG6/q5iy0qBW6s0tRg==,type:str]
+    TOTP_ENABLED: ENC[AES256_GCM,data:Ob1swQ==,iv:XfJJVIMEq5Nrk+pt9BSoGp6U1aYNSv412UnpXcWls8k=,tag:swrAwT2vJ8gug628tpGNTA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +27,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkZ0YwZ1VRSDJ4QkNhY0E4
-            OFVTdW1vTE92MC91bHVFQUNvODBkaU8xaTBBCkZtbC9uS3hIaXpsS2hCcVBrc00z
-            M2JidWJOQzRUNEFDaU83ZE9XL1hqRG8KLS0tIDJobllVa1Zrbld0ckFEK0pqMWVL
-            OVZ6OW1QK3lhQm05ZGVTS1hXL1BqZDgKNW5m/MOuM5RQBZJFxtDqm6lzAoP6L5tZ
-            l1hXnzLvm1yfvGxIUo1MvDI4oRfatCPi2Ev2JuM0zCO7Y1PL5qhshw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtZ3l5cTVyMTRER3pvTysx
+            dzVNbk1mMUVOaVNWWEIwOENLM0FtRDlNSzBrCnpYVWJYYWdzd20rMXNNc0lVY2Jt
+            Rmo2Z3daeHhXRyt4S0MyNWdQcVhmbjgKLS0tIGhQc092S2JDMGlqdWUwSWJiZGpo
+            Y2lXK3N2K1ZnV1BlUVVxTW5ON3FUWlUKUIzVQUtZaXqfP1QuIPFA7HqkqDhdCNNr
+            PS9PkBiHw+LfhftRHz7jxGMAeqvnidWTkyXB8+ft+1EjU7fTHxQWJA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-09T20:14:26Z"
-    mac: ENC[AES256_GCM,data:pQIE5guA04m8CFIe6Si6PBaNBDaBgAAYVLIbFYneutzDxSttW6dDSLnWbaou/hb6UoG/RuypKmjH5L5VFZNh0dPYMlp7nST0+QmgezdJCS4kn992cGk//aeitJ5EUVeSVYEY5bYRAjhSVhlkBxR3KlKVR34GnRPH/RzuPCszBLQ=,iv:WFT+l0xwnWpUnA+xhl/teHq72vAEwJgA+yerAMlY7ag=,tag:gQ9wvTqUeA6QcRQgyuH4Mg==,type:str]
+    lastmodified: "2024-12-19T11:58:43Z"
+    mac: ENC[AES256_GCM,data:At65BU2ZMPvODqXVmMe78F4AhTgX+6vXbqPi5xvzUUO6ELRlxvOYab2UH1xjRxI8n5iVqBanAOlzd7w3RcxYvOigA5VbL5RwKBd98fUb9udZ5L6/lNwL1GMJIHCQ0D9osYUPMHOOzB2II16NJTeDtmNrY5NblPlBg/Weg76yBCU=,iv:cxp5v0C5n2QY1qh7/+IPTZwdxZm7u6i+s0wRrYXHkz8=,tag:TRT00rZJ50XRmmhhNjbDUQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.2
