guacamole: forgot to add secret to kustomisation

--- a/apps/production/guacamole/kustomization.yaml
+++ b/apps/production/guacamole/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../base/guacamole
   - ingressConfig.yaml
   - guacamole-postgresql-claim-secret.yaml
+  - guacamole-postgresql.yaml
   - guacamole-secret.yaml
 
 # patches:
